# trabalho-3-BrendaDantas

./: CMakeLists.txt  README.md  READMEI.md  main
data/: maze1.txt  maze2.txt  maze3.txt  maze4.txt  maze5.txt
include/: Level.cpp  Level.h  Player.h  Snake.h  SnakeGame.h
src/: Level.cpp  Player.cpp  Snake.cpp  SnakeGame.cpp
