cmake_minimum_required(VERSION 3.5)
project(Snaze VERSION 0.1 LANGUAGES CXX )


### Execut치vel
# Diret칩rio contendo os .hpp
include_directories( include )

# Cria um execut치vel com nome "Snaze", adiciona neste execut치vel os arquivos src/Snaze.cpp src/SnakeGame.cpp src/Level.cpp src/PLayer.cpp
add_executable( Snaze
                src/Snaze.cpp
                src/SnakeGame.cpp 
                src/Level.cpp 
                src/Player.cpp
)

# The end
